--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+node_modules
+.next
+.vercel
+dist
+.DS_Store
+*.log
+out
+coverage
+.env
+.env.local
+.env.production
+.env.development
 # Comprehensive .gitignore template for AI-generated projects
 # Covers most common languages, frameworks, and tools
 
